force-app/main/default/objects/Product2/fields/Care_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Care_Instructions__c</fullName>
    <label>Care Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>