force-app/main/default/objects/Product2/fields/Discontinued__c.field-meta.xml
<CustomField>
    <fullName>Discontinued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discontinued</label>
    <type>Checkbox</type>
</CustomField>