force-app/main/default/objects/Product2/fields/Fabric_Content__c.field-meta.xml
<CustomField>
    <fullName>Fabric_Content__c</fullName>
    <label>Fabric Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>