force-app/main/default/objects/Product2/fields/Fit_Type__c.field-meta.xml
<CustomField>
    <fullName>Fit_Type__c</fullName>
    <label>Fit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slim</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Relaxed</fullName>
            </value>
            <value>
                <fullName>Oversized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>