force-app/main/default/objects/Product2/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Women</fullName>
                <default>true</default>
                <label>Women</label>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>