force-app/main/default/objects/Product2/fields/Occasion__c.field-meta.xml
<CustomField>
    <fullName>Occasion__c</fullName>
    <label>Occasion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Cocktail</fullName>
            </value>
            <value>
                <fullName>Formal</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Athleisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>