force-app/main/default/objects/Product2/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <label>Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solid</fullName>
            </value>
            <value>
                <fullName>Floral</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Animal</fullName>
            </value>
            <value>
                <fullName>Geometric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>